# skillsfuture-course-gap-chatbot

./: .dockerignore  Dockerfile  PROCESS.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
data/: course_skills.json  data.ipynb  jd.csv  skillsfuture_courses.xlsx
skill_extraction/: llm_extractor.py  precompute_skills.py  skillner_extractor.py
src/: chroma_store.py  debug_chroma.py  ingest_chroma.py  llm_answer.py  llm_client.py  scoring.py  semantic_gap.py
