[project]
name = "skillsfuture-course-gap-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "numpy>=2.4.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "protobuf==3.20.3",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.0",
    "skillner>=1.0.3",
    "spacy>=3.8.14",
    "streamlit>=1.57.0",
    "torchvision>=0.27.0",
]
